Z-index kinda fixed

--- a/styles/comps/OnOff.module.scss
+++ b/styles/comps/OnOff.module.scss
@@ -18,6 +18,7 @@
     min-height: var(--size);
     display: flex;
     align-items: center;
+    position: relative;
     z-index: 0;
     padding-right: calc(var(--size) * 1.2);
     cursor: pointer;
