--- a/styles/comps/SortItems.module.scss
+++ b/styles/comps/SortItems.module.scss
@@ -11,6 +11,7 @@
   border-radius: var(--border-radius);
   width: min(95%, 12.5rem);
   margin-left: 0.5rem;
+  border: 1px solid red;
 
   .close {
     width: 100%;
