--- a/styles/comps/loadingCheckUsers.module.scss
+++ b/styles/comps/loadingCheckUsers.module.scss
@@ -1,38 +1,39 @@
 .loadingCheck {
-    position: absolute;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  z-index: 1;
+  background-color: rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(3px);
+
+  h4 {
+    color: var(--color-light);
+    text-align: justify;
+    width: min(90%, 25rem);
     width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    z-index: 1;
-    background-color: rgba(255, 255, 255, 0.3);
-    backdrop-filter: blur(3px);
+    font-size: var(--fs1);
+    background-color: var(--color-blue-dark);
+    padding: 1rem;
+    text-align: center;
+  }
 
-    h4 {
-        color: var(--color-light);
-        text-align: justify;
-        width: min(90%, 25rem);
-        width: 100%;
-        font-size: var(--fs1);
-        background-color: var(--color-blue-dark);
-        padding: 1rem;
-        text-align: center;
+  span {
+    border: 1px solid var(--color-blue-dark);
+    padding: 0.5rem 2rem;
+    border-radius: var((--border-radius));
+    color: var(--color-light);
+    margin-top: 1rem;
+    transition: var(--transition);
+    cursor: pointer;
+
+    &:hover {
+      color: var(--color-blue-dark);
+      background-color: var(--color-light);
     }
-
-    span {
-        border: 1px solid var(--color-blue-dark);
-        padding: .5rem 2rem;
-        border-radius: var((--border-radius));
-        color: var(--color-light);
-        margin-top: 1rem;
-        transition: var(--transition);
-        cursor: pointer;
-
-        &:hover {
-            color: var(--color-blue-dark);
-            background-color: var(--color-light);
-        }
-    }
+  }
 }
